[gd_scene load_steps=19 format=2]

[ext_resource path="res://Creatures/ClydeFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Creatures/KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://Creatures/Clyde-Tree.tres" type="AnimationNodeStateMachine" id=3]
[ext_resource path="res://Pixilart Sprite Sheet (1).png" type="Texture" id=4]
[ext_resource path="res://Creatures/UN-Moving-Anims.tscn" type="PackedScene" id=5]
[ext_resource path="res://Creatures/Camera2D.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 30.5, 43.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 30.5, 23 )

[sub_resource type="Animation" id=14]
resource_name = "Crouch-Slide"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Crouch-Slide" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Death"
length = 0.27
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Jump"
length = 0.22
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Running-Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Running-Idle"
length = 0.5
loop = true
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Running-Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.145, 0.285, 0.42 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=19]
resource_name = "attack"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 102.5, 19.5 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "ShotgunSpread"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
modulate = Color( 1, 0.784314, 0.784314, 1 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 1 )
animation = "Running-Idle"

[node name="FullBodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( -3.5, 0.5 )
shape = SubResource( 12 )

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.654902, 0.192157, 1, 1 )
position = Vector2( -3, 21 )
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch-Slide = SubResource( 14 )
anims/Death = SubResource( 15 )
anims/Jump = SubResource( 16 )
anims/RESET = SubResource( 17 )
anims/Running-Idle = SubResource( 18 )
anims/attack = SubResource( 19 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource( 3 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 20 )

[node name="Weapon" type="Area2D" parent="."]

[node name="WeaponCollision" type="CollisionShape2D" parent="Weapon"]
position = Vector2( 140.5, 7.5 )
shape = SubResource( 9 )
disabled = true

[node name="Sprite" type="Sprite" parent="Weapon"]
visible = false
position = Vector2( 149, 5 )
texture = ExtResource( 4 )
hframes = 7

[node name="SpreadAnimation" type="AnimationPlayer" parent="Weapon"]
anims/RESET = SubResource( 10 )
anims/ShotgunSpread = SubResource( 11 )

[node name="UN-Moving-Anims" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 4.9 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="Weapon" to="." method="_on_Weapon_area_entered"]
[connection signal="animation_finished" from="Weapon/SpreadAnimation" to="." method="_on_SpreadAnimation_animation_finished"]
